[Improvement][RemoteLogging]Support AbsRemoteLogHandler

--- a/dolphinscheduler-common/src/main/resources/common.properties
+++ b/dolphinscheduler-common/src/main/resources/common.properties
@@ -202,4 +202,9 @@ remote.logging.s3.region=<region>
 remote.logging.google.cloud.storage.credential=/path/to/credential
 # gcs bucket name, required if you set remote.logging.target=GCS
 remote.logging.google.cloud.storage.bucket.name=<your-bucket>
-
+# abs account name, required if you set resource.storage.type=ABS
+remote.logging.abs.account.name=<your-account-name>
+# abs account key, required if you set resource.storage.type=ABS
+remote.logging.abs.account.key=<your-account-key>
+# abs container name, required if you set resource.storage.type=ABS
+remote.logging.abs.container.name=<your-container-name>
