--- a/dolphinscheduler-common/src/main/resources/common.properties
+++ b/dolphinscheduler-common/src/main/resources/common.properties
@@ -203,3 +203,8 @@ remote.logging.google.cloud.storage.credential=/path/to/credential
 # gcs bucket name, required if you set remote.logging.target=GCS
 remote.logging.google.cloud.storage.bucket.name=<your-bucket>
 
+
+netty.ssl.enable=false
+netty.ssl.root.path=xxx/bbb/cc
+netty.ssl.key.path=xxx/bbb/cc
+netty.ssl.cert.path=xxx/bbb/cc
