[improvement-#netty] add netty ssl

--- a/dolphinscheduler-common/src/main/resources/common.properties
+++ b/dolphinscheduler-common/src/main/resources/common.properties
@@ -205,6 +205,5 @@ remote.logging.google.cloud.storage.bucket.name=<your-bucket>
 
 
 netty.ssl.enable=false
-netty.ssl.root.path=xxx/bbb/cc
-netty.ssl.key.path=xxx/bbb/cc
-netty.ssl.cert.path=xxx/bbb/cc
+netty.ssl.key.path=/Users/fuchanghai/Documents/my_github/openssl/private.pem
+netty.ssl.cert.path=/Users/fuchanghai/Documents/my_github/openssl/cert.crt
