[improvement-#netty] add netty ssl

--- a/dolphinscheduler-common/src/main/resources/common.properties
+++ b/dolphinscheduler-common/src/main/resources/common.properties
@@ -205,5 +205,5 @@ remote.logging.google.cloud.storage.bucket.name=<your-bucket>
 
 
 netty.ssl.enable=false
-netty.ssl.key.path=/Users/fuchanghai/Documents/my_github/openssl/private.pem
-netty.ssl.cert.path=/Users/fuchanghai/Documents/my_github/openssl/cert.crt
+netty.ssl.key.path=/path/private.pem
+netty.ssl.cert.path=/path/cert.crt
