--- a/dolphinscheduler-worker/src/main/resources/application.yaml
+++ b/dolphinscheduler-worker/src/main/resources/application.yaml
@@ -50,10 +50,10 @@ worker:
   server-load-protection:
     # If set true, will open worker overload protection
     enabled: true
-    # Worker max cpu usage, when the worker's cpu usage is smaller then this value, worker server can be dispatched tasks.
-    max-cpu-usage-percentage-thresholds: 0.7
-    # Worker max jvm memory usage , when the worker's jvm memory usage is smaller then this value, worker server can be dispatched tasks.
-    max-jvm-memory-usage-percentage-thresholds: 0.7
+    # Worker max system cpu usage, when the worker's system cpu usage is smaller then this value, worker server can be dispatched tasks.
+    max-system-cpu-usage-percentage-thresholds: 0.7
+    # Worker max jvm cpu usage, when the worker's jvm cpu usage is smaller then this value, worker server can be dispatched tasks.
+    max-jvm-cpu-usage-percentage-thresholds: 0.7
     # Worker max System memory usage , when the master's system memory usage is smaller then this value, master server can execute workflow.
     max-system-memory-usage-percentage-thresholds: 0.7
     # Worker max disk usage , when the worker's disk usage is smaller then this value, worker server can be dispatched tasks.
