--- a/dolphinscheduler-api/src/main/resources/application.yaml
+++ b/dolphinscheduler-api/src/main/resources/application.yaml
@@ -151,10 +151,9 @@ api:
   python-gateway:
     # Weather enable python gateway server or not. The default value is false.
     enabled: false
-    # Authentication token for connection from python api to python gateway server. Can create token in 
-    # Security -> Token Management.
+    # Authentication token for connection from python api to python gateway server. Should be changed the default value
     # when you deploy in public network.
-    auth-token: ""
+    auth-token: jwUDzpLsNKEFER4*a8gruBH_GsAurNxU7A@Xc
     # The address of Python gateway server start. Set its value to `0.0.0.0` if your Python API run in different
     # between Python gateway server. It could be be specific to other address like `127.0.0.1` or `localhost`
     gateway-server-address: 0.0.0.0
