[improvement-#netty] add netty ssl into application yaml

--- a/dolphinscheduler-alert/dolphinscheduler-alert-server/src/main/resources/application.yaml
+++ b/dolphinscheduler-alert/dolphinscheduler-alert-server/src/main/resources/application.yaml
@@ -100,6 +100,11 @@ registry:
 metrics:
   enabled: true
 
+rpc:
+  ssl:
+    enabled: false
+    cert-file-path: /path/cert.crt
+    key-file-path: /path/private.pem
 # Override by profile
 
 ---
