--- a/dolphinscheduler-api/src/main/resources/application.yaml
+++ b/dolphinscheduler-api/src/main/resources/application.yaml
@@ -237,6 +237,11 @@ casdoor:
   # Doplhinscheduler login url
   redirect-url: ""
 
+rpc:
+  ssl:
+    enabled: false
+    cert-file-path: /path/cert.crt
+    key-file-path: /path/private.pem
 
 # Override by profile
 
