--- a/dolphinscheduler-master/src/main/resources/application.yaml
+++ b/dolphinscheduler-master/src/main/resources/application.yaml
@@ -165,6 +165,12 @@ management:
 metrics:
   enabled: true
 
+rpc:
+  ssl:
+    enabled: false
+    cert-file-path: /path/cert.crt
+    key-file-path: /path/private.pem
+
 # Override by profile
 
 ---
