--- a/.github/workflows/cluster-test/postgresql_with_postgresql_registry/docker-compose-base.yaml
+++ b/.github/workflows/cluster-test/postgresql_with_postgresql_registry/docker-compose-base.yaml
@@ -1,4 +1,3 @@
-#!/bin/bash
 #
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
@@ -15,19 +14,22 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-set -euox pipefail
 
-#Start base service containers
-docker-compose -f .github/workflows/cluster-test/mysql/docker-compose-base.yaml up -d
+version: "3"
 
-#Build ds mysql cluster image
-docker build -t jdk8:ds_mysql_cluster -f .github/workflows/cluster-test/mysql/Dockerfile .
+services:
+  postgres:
+    container_name: postgres
+    image: postgres:14.1
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: dolphinscheduler
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 60s
+      retries: 120
 
-#Start ds mysql cluster container
-docker-compose -f .github/workflows/cluster-test/mysql/docker-compose-cluster.yaml up -d
-
-#Running tests
-/bin/bash .github/workflows/cluster-test/mysql/running_test.sh
-
-#Cleanup
-docker rm -f $(docker ps -aq)
