--- a/dolphinscheduler-master/src/test/resources/application.yaml
+++ b/dolphinscheduler-master/src/test/resources/application.yaml
@@ -89,8 +89,6 @@ registry:
 
 master:
   listen-port: 5678
-  # master fetch command num
-  fetch-command-num: 10
   # master prepare execute thread number to limit handle commands in parallel
   pre-exec-threads: 10
   # master execute thread number to limit process instances in parallel
@@ -127,6 +125,13 @@ master:
     # The max waiting time to reconnect to registry if you set the strategy to waiting
     max-waiting-time: 100s
   worker-group-refresh-interval: 10s
+  command-fetch-strategy:
+    type: ID_SLOT_BASED
+    config:
+      # The incremental id step
+      id-step: 3
+      # master fetch command num
+      fetch-size: 11
 
 server:
   port: 5679
