--- a/.github/workflows/mergeable.yml
+++ b/.github/workflows/mergeable.yml
@@ -20,11 +20,11 @@
 on:
   pull_request:
 
-name: "Mergeable: milestone-label-check"
+name: "Mergeable"
 
 jobs:
   result:
-    name: Mergeable
+    name: "Mergeable: milestone-label-check"
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
