--- a/pom.xml
+++ b/pom.xml
@@ -615,6 +615,8 @@
                     <systemPropertyVariables>
                         <jacoco-agent.destfile>${project.build.directory}/jacoco.exec</jacoco-agent.destfile>
                     </systemPropertyVariables>
+                    <parallel>all</parallel>
+                    <threadCount>4</threadCount>
                 </configuration>
             </plugin>
 
