[Improvement][Master] Add Quartz Enable Control
Update dolphinscheduler-master/src/main/java/org/apache/dolphinscheduler/server/master/MasterServer.java

Co-authored-by: Wenjun Ruan <wenjun@apache.org>

Update dolphinscheduler-master/src/main/resources/application.yaml

Co-authored-by: Wenjun Ruan <wenjun@apache.org>

fix comments

--- a/dolphinscheduler-master/src/main/resources/application.yaml
+++ b/dolphinscheduler-master/src/main/resources/application.yaml
@@ -84,6 +84,8 @@ registry:
 master:
   listen-port: 5678
   # master prepare execute thread number to limit handle commands in parallel
+  scheduler-enabled: true
+  # master prepare execute thread number to limit handle commands in parallel
   pre-exec-threads: 10
   # master execute thread number to limit process instances in parallel
   exec-threads: 100
