--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@ third-party-dependencies.txt
 .tmp
 node_modules
 npm-debug.log
-.vscode
 logs/*
 .mvn/
 .www
@@ -52,3 +51,5 @@ dolphinscheduler-common/test
 dolphinscheduler-worker/logs
 dolphinscheduler-master/logs
 dolphinscheduler-api/logs
+deploy/docker/mysql/**
+**/bin
