Move license check into license.yml

--- a/.github/actions/sanity-check/action.yml
+++ b/.github/actions/sanity-check/action.yml
@@ -33,6 +33,8 @@ runs:
   steps:
     - name: Check License Header
       uses: apache/skywalking-eyes/header@main
+    - name: Check Dependencies' License
+      uses: apache/skywalking-eyes/dependency@main
 
     - shell: bash
       run: ./mvnw spotless:check
