[Fix][CI] fix the ci error of Values.datasource.profile

--- a/deploy/kubernetes/dolphinscheduler/templates/configmap-dolphinscheduler-alert.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/configmap-dolphinscheduler-alert.yaml
@@ -33,15 +33,13 @@ data:
       banner:
         charset: UTF-8
       datasource:
-        profile: postgresql
-        config:
-          driver-class-name: org.postgresql.Driver
-          url: jdbc:postgresql://127.0.0.1:5432/dolphinscheduler
-          username: root
-          password: root
-          hikari:
-            connection-test-query: select 1
-            pool-name: DolphinScheduler
+        driver-class-name: org.postgresql.Driver
+        url: jdbc:postgresql://127.0.0.1:5432/dolphinscheduler
+        username: root
+        password: root
+        hikari:
+          connection-test-query: select 1
+          pool-name: DolphinScheduler
     
     # Mybatis-plus configuration, you don't need to change it
     mybatis-plus:
@@ -102,4 +100,16 @@ data:
     
     metrics:
       enabled: true
+    
+    # Override by profile
+    ---
+    spring:
+      config:
+        activate:
+          on-profile: mysql
+      datasource:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://127.0.0.1:3306/dolphinscheduler
+        username: root
+        password: root
 {{- end }}
