--- a/deploy/kubernetes/dolphinscheduler/templates/configmap-dolphinscheduler-api.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/configmap-dolphinscheduler-api.yaml
@@ -54,15 +54,13 @@ data:
       messages:
         basename: i18n/messages
       datasource:
-        profile: postgresql
-        config:
-          driver-class-name: org.postgresql.Driver
-          url: jdbc:postgresql://127.0.0.1:5432/dolphinscheduler
-          username: root
-          password: root
-          hikari:
-            connection-test-query: select 1
-            pool-name: DolphinScheduler
+        driver-class-name: org.postgresql.Driver
+        url: jdbc:postgresql://127.0.0.1:5432/dolphinscheduler
+        username: root
+        password: root
+        hikari:
+          connection-test-query: select 1
+          pool-name: DolphinScheduler
       quartz:
         auto-startup: false
         job-store-type: jdbc
@@ -239,6 +237,21 @@ data:
       application-name: ""
       # Doplhinscheduler login url
       redirect-url: ""
+    
+    # Override by profile
+    ---
+    spring:
+      config:
+        activate:
+          on-profile: mysql
+      datasource:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://127.0.0.1:3306/dolphinscheduler
+        username: root
+        password: root
+      quartz:
+        properties:
+          org.quartz.jobStore.driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 {{- end }}
 
 
