--- a/deploy/kubernetes/dolphinscheduler/templates/configmap-dolphinscheduler-master.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/configmap-dolphinscheduler-master.yaml
@@ -33,15 +33,13 @@ data:
         time-zone: UTC
         date-format: "yyyy-MM-dd HH:mm:ss"
       datasource:
-        profile: postgresql
-        config:
-          driver-class-name: org.postgresql.Driver
-          url: jdbc:postgresql://127.0.0.1:5432/dolphinscheduler
-          username: root
-          password: root
-          hikari:
-            connection-test-query: select 1
-            pool-name: DolphinScheduler
+        driver-class-name: org.postgresql.Driver
+        url: jdbc:postgresql://127.0.0.1:5432/dolphinscheduler
+        username: root
+        password: root
+        hikari:
+          connection-test-query: select 1
+          pool-name: DolphinScheduler
       quartz:
         job-store-type: jdbc
         jdbc:
@@ -157,4 +155,19 @@ data:
     
     metrics:
       enabled: true
+    
+    # Override by profile
+    ---
+    spring:
+      config:
+        activate:
+          on-profile: mysql
+      datasource:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://127.0.0.1:3306/dolphinscheduler
+        username: root
+        password: root
+      quartz:
+        properties:
+          org.quartz.jobStore.driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 {{- end }}
