[Improvement][Helm] Make configmap of api/master/worker/alert configuration
Update deploy/kubernetes/dolphinscheduler/templates/statefulset-dolphinscheduler-worker.yaml

Co-authored-by: Gallardot <gallardot@apache.org>

--- a/deploy/kubernetes/dolphinscheduler/templates/configmap-dolphinscheduler-alert.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/configmap-dolphinscheduler-alert.yaml
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-{{- if and .Values.alert.enabled }}
+{{- if .Values.alert.enableCustomizedConfig }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -23,93 +23,8 @@ metadata:
     app.kubernetes.io/name: {{ include "dolphinscheduler.fullname" . }}-alert
     {{- include "dolphinscheduler.alert.labels" . | nindent 4 }}
 data:
-  application.yaml: |
-    spring:
-      profiles:
-        active: {{ .Values.datasource.profile }}
-      jackson:
-        time-zone: UTC
-        date-format: "yyyy-MM-dd HH:mm:ss"
-      banner:
-        charset: UTF-8
-      datasource:
-        driver-class-name: org.postgresql.Driver
-        url: jdbc:postgresql://127.0.0.1:5432/dolphinscheduler
-        username: root
-        password: root
-        hikari:
-          connection-test-query: select 1
-          pool-name: DolphinScheduler
-    
-    # Mybatis-plus configuration, you don't need to change it
-    mybatis-plus:
-      mapper-locations: classpath:org/apache/dolphinscheduler/dao/mapper/*Mapper.xml
-      type-aliases-package: org.apache.dolphinscheduler.dao.entity
-      configuration:
-        cache-enabled: false
-        call-setters-on-nulls: true
-        map-underscore-to-camel-case: true
-        jdbc-type-for-null: NULL
-      global-config:
-        db-config:
-          id-type: auto
-        banner: false
-    
-    server:
-      port: 50053
-    
-    management:
-      endpoints:
-        web:
-          exposure:
-            include: health,metrics,prometheus
-      endpoint:
-        health:
-          enabled: true
-          show-details: always
-      health:
-        db:
-          enabled: true
-        defaults:
-          enabled: false
-      metrics:
-        tags:
-          application: ${spring.application.name}
-    
-    alert:
-      port: 50052
-      # Mark each alert of alert server if late after x milliseconds as failed.
-      # Define value is (0 = infinite), and alert server would be waiting alert result.
-      wait-timeout: 0
-      max-heartbeat-interval: 60s
-      query_alert_threshold: 100
-    
-    registry:
-      type: zookeeper
-      zookeeper:
-        namespace: dolphinscheduler
-        connect-string: localhost:2181
-        retry-policy:
-          base-sleep-time: 60ms
-          max-sleep: 300ms
-          max-retries: 5
-        session-timeout: 30s
-        connection-timeout: 9s
-        block-until-connected: 600ms
-        digest: ~
-    
-    metrics:
-      enabled: true
-    
-    # Override by profile
-    ---
-    spring:
-      config:
-        activate:
-          on-profile: mysql
-      datasource:
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://127.0.0.1:3306/dolphinscheduler
-        username: root
-        password: root
-{{- end }}
+{{- range $path, $config := .Values.alert.customizedConfig }}
+  {{ $path }}: |
+{{ $config | indent 4 -}}
+{{- end -}}
+{{- end -}}
