--- a/deploy/kubernetes/dolphinscheduler/values.yaml
+++ b/deploy/kubernetes/dolphinscheduler/values.yaml
@@ -449,7 +449,19 @@ master:
   #   requests:
   #     memory: "2Gi"
   #     cpu: "500m"
-
+  # -- enable configure custom config
+  enableCustomizedConfig: false
+  # -- configure aligned with https://github.com/apache/dolphinscheduler/blob/dev/dolphinscheduler-master/src/main/resources/application.yaml
+  customizedConfig: { }
+  #  customizedConfig:
+  #    application.yaml: |
+  #      profiles:
+  #        active: postgresql
+  #      banner:
+  #        charset: UTF-8
+  #      jackson:
+  #        time-zone: UTC
+  #        date-format: "yyyy-MM-dd HH:mm:ss"
   # -- Periodic probe of container liveness. Container will be restarted if the probe fails.
   # More info: [container-probes](https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes)
   livenessProbe:
@@ -578,6 +590,19 @@ worker:
 
   # -- Periodic probe of container liveness. Container will be restarted if the probe fails.
   # More info: [container-probes](https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes)
+  # -- enable configure custom config
+  enableCustomizedConfig: false
+  # -- configure aligned with https://github.com/apache/dolphinscheduler/blob/dev/dolphinscheduler-worker/src/main/resources/application.yaml
+  customizedConfig: { }
+#  customizedConfig:
+#    application.yaml: |
+#      profiles:
+#        active: postgresql
+#      banner:
+#        charset: UTF-8
+#      jackson:
+#        time-zone: UTC
+#        date-format: "yyyy-MM-dd HH:mm:ss"
   livenessProbe:
     # -- Turn on and off liveness probe
     enabled: true
@@ -740,7 +765,19 @@ alert:
   #   requests:
   #     memory: "1Gi"
   #     cpu: "500m"
-
+  # -- enable configure custom config
+  enableCustomizedConfig: false
+  # -- configure aligned with https://github.com/apache/dolphinscheduler/blob/dev/dolphinscheduler-alert/dolphinscheduler-alert-server/src/main/resources/application.yaml
+  customizedConfig: { }
+  #  customizedConfig:
+  #    application.yaml: |
+  #      profiles:
+  #        active: postgresql
+  #      banner:
+  #        charset: UTF-8
+  #      jackson:
+  #        time-zone: UTC
+  #        date-format: "yyyy-MM-dd HH:mm:ss"
   # -- Periodic probe of container liveness. Container will be restarted if the probe fails.
   # More info: [container-probes](https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes)
   livenessProbe:
@@ -840,7 +877,19 @@ api:
   #   requests:
   #     memory: "1Gi"
   #     cpu: "500m"
-
+  # -- enable configure custom config
+  enableCustomizedConfig: false
+  # -- configure aligned with https://github.com/apache/dolphinscheduler/blob/dev/dolphinscheduler-api/src/main/resources/application.yaml
+  customizedConfig: { }
+  #  customizedConfig:
+  #    application.yaml: |
+  #      profiles:
+  #        active: postgresql
+  #      banner:
+  #        charset: UTF-8
+  #      jackson:
+  #        time-zone: UTC
+  #        date-format: "yyyy-MM-dd HH:mm:ss"
   # -- Periodic probe of container liveness. Container will be restarted if the probe fails.
   # More info: [container-probes](https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes)
   livenessProbe:
