--- a/deploy/kubernetes/dolphinscheduler/templates/deployment-dolphinscheduler-alert.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/deployment-dolphinscheduler-alert.yaml
@@ -115,9 +115,11 @@ spec:
             - name: config-volume
               mountPath: /opt/dolphinscheduler/conf/common.properties
               subPath: common.properties
+            {{- if .Values.alert.enableCustomizedConfig }}
             - name: alert-config-volume
               mountPath: /opt/dolphinscheduler/conf/application.yaml
               subPath: application.yaml
+            {{- end }}
       volumes:
         - name: {{ include "dolphinscheduler.fullname" . }}-alert
           {{- if .Values.alert.persistentVolumeClaim.enabled }}
@@ -129,7 +131,9 @@ spec:
         - name: config-volume
           configMap:
             name: {{ include "dolphinscheduler.fullname" . }}-configs
+        {{- if .Values.alert.enableCustomizedConfig }}
         - name: alert-config-volume
           configMap:
             name: {{ include "dolphinscheduler.fullname" . }}-alert
+        {{- end }}
 {{- end }}
