[Bug] [Build] Fix build

--- a/dolphinscheduler-storage-plugin/dolphinscheduler-storage-s3/pom.xml
+++ b/dolphinscheduler-storage-plugin/dolphinscheduler-storage-s3/pom.xml
@@ -39,6 +39,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.dolphinscheduler</groupId>
+            <artifactId>dolphinscheduler-aws-authentication</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-s3</artifactId>
         </dependency>
