add task-pure delete some task module to reduce the size of the deployment package

--- a/dolphinscheduler-task-plugin/pom.xml
+++ b/dolphinscheduler-task-plugin/pom.xml
@@ -29,6 +29,7 @@
 
     <modules>
         <module>dolphinscheduler-task-all</module>
+        <module>dolphinscheduler-task-pure</module>
         <module>dolphinscheduler-task-api</module>
         <module>dolphinscheduler-task-shell</module>
         <module>dolphinscheduler-task-datax</module>
